# vps-ibr

./: .gitignore  LICENSE  README.md  project-structure.txt  pyproject.toml  quickstart.py  setup.py
examples/config_examples/: servers_config.yaml
tests/: test_inventory.py
vps_ibr/: __init__.py  cli.py  config.py
vps_ibr/backup/: __init__.py  manager.py
vps_ibr/inventory/: __init__.py  collector.py  parser.py
vps_ibr/restore/: __init__.py  manager.py
vps_ibr/scripts/: detect_services.sh  get_history.sh  get_users.sh
vps_ibr/utils/: __init__.py  file_utils.py  ssh.py
